# sorcery

./: .gitattributes  .gitignore  Cargo.toml  Makefile.toml  README.md
crates/sorcery_engine/: Cargo.toml
crates/sorcery_engine/src/: cards.json  components.rs  core.rs  game.rs  lib.rs
crates/sorcery_server/: Cargo.toml
tools/: sort_derive.py
