[package]
name = "sorcery_engine"
publish = false
authors = ["Christian Ivicevic <mail@christian-ivicevic.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
derive_builder = "0.11.1"
hecs = { version = "0.7.6", features = ["macros"] }
indexmap = { version = "1.8.1", features = ["serde"] }
log = "0.4.16"
once_cell = "1.10.0"
rand = "0.8.5"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = { version = "1.0.79", features = ["preserve_order"] }

[dev-dependencies]
pretty_assertions = "1.2.1"
